<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="344dp"
        android:layout_height="56dp"
        android:text="@string/txt_title"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_name"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_place"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:ems="10"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_place" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_description"
        android:layout_width="283dp"
        android:layout_height="148dp"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:layout_marginTop="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>